2008-03-13  Stefan Kost  <ensonic@users.sf.net>

	* FSM/PhatMan/Chorus.cpp:
	  Copy result data back.

	* common/mdk/mdk.h:
	  Formatting.

2008-03-12  Stefan Kost  <ensonic@users.sf.net>

	* FSM/PhatMan/Chorus.cpp:
	* common/mdk/mdkimp.cpp:
	  Get the mdk from host.

2008-03-12  Stefan Kost  <ensonic@users.sf.net>

	* FSM/PhatMan/Chorus.cpp:
	  Workaround for crasher on one machine.

2008-03-10  Stefan Kost  <ensonic@users.sf.net>

	* common/MachineInterface.h:
	  Revert ABI breakage.

2008-03-10  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Add CFLAG to suppress gcc warning, that if we fix it would change the
	  ABI. Need to revert the changes in the header still.

2008-02-23  Krzysztof Foltman  <wdev@foltman.com>

	* FSM/Makefile.am:
	* FSM/PanzerDelay:
	* FSM/PanzerDelay/Delay.cpp:
	* FSM/PanzerDelay/Makefile.am:
	* FSM/PanzerDelay/panzer.rc:
	* FSM/PanzerDelay/resource.h:
	* FSM/PhatMan:
	* FSM/PhatMan/Chorus.cpp:
	* FSM/PhatMan/Makefile.am:
	* FSM/PhatMan/chorus.rc:
	* FSM/PhatMan/resource.h:
	* configure.ac:
          Add new machines (should work already, but they apparently don't)

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* common/MachineInterface.h:
	  Fix gcc warnings.

2007-12-09  Stefan Kost  <ensonic@users.sf.net>

	* FSM/ArpMan/ArpMan.cpp:
	* FSM/Chorus/Chorus.cpp:
	* FSM/Infector/Channel.cpp:
	* FSM/Infector/Filters.cpp:
	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Infector.h:
	* FSM/Infector/Track.cpp:
	* FSM/Infector/Vegetable.cpp:
	* FSM/Kick/Kick.cpp:
	* FSM/dspchips/DSPChips.h:
	  Add license headers.

2007-11-25  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Infector.h:
	  Use MAX_BUFFER_LENGTH in code. Remove some assert that where added to
	  track the problem but add one for numsamples.

	* common/MachineInterface.h:
	  Comment what MAX_BUFFER_LENGTH is used for.

2007-11-24  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Infector.h: